Fixed so that button says Show More and Show Less when expanded/collapsed

--- a/src/Components/Cards/MiniCard.module.css
+++ b/src/Components/Cards/MiniCard.module.css
@@ -170,3 +170,18 @@
 .pText {
     color: white;
 }
+
+.descriptionContainer {
+    font-size: 1rem;
+    
+     border: 2px solid white;
+     border-radius: 24px;
+     height: fit-content;
+     margin-top: 2rem;
+     padding: 2rem;
+     width: 70rem;
+     margin-left: auto;
+     margin-right: auto;
+     
+     gap: 6rem;
+}
